added getFamilyStats route in backend
